--- a/experimental/packages/opentelemetry-instrumentation/package.json
+++ b/experimental/packages/opentelemetry-instrumentation/package.json
@@ -78,11 +78,13 @@
     "shimmer": "^1.2.1"
   },
   "peerDependencies": {
-    "@opentelemetry/api": "^1.3.0"
+    "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/api-logs": "^0.45.1"
   },
   "devDependencies": {
     "@babel/core": "7.23.3",
     "@opentelemetry/api": "1.7.0",
+    "@opentelemetry/api-logs": "0.45.1",
     "@opentelemetry/sdk-metrics": "1.18.1",
     "@types/mocha": "10.0.4",
     "@types/node": "18.6.5",
