--- a/experimental/packages/sdk-logs/package.json
+++ b/experimental/packages/sdk-logs/package.json
@@ -75,6 +75,7 @@
     "@babel/core": "7.23.3",
     "@opentelemetry/api": ">=1.4.0 <1.8.0",
     "@opentelemetry/api-logs": "0.45.1",
+    "@opentelemetry/resources_1.9.0": "npm:@opentelemetry/resources@1.9.0",
     "@types/mocha": "10.0.4",
     "@types/node": "18.6.5",
     "@types/sinon": "10.0.20",
